--- a/src/pages/care-plan/su-care-review.html
+++ b/src/pages/care-plan/su-care-review.html
@@ -6,7 +6,6 @@
 <link rel="import" href="../../../bower_components/neon-animation/neon-animated-pages.html" />
 
 <link rel="import" href="../../elements/su-header/su-header.html" />
-<link rel="import" href="../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../elements/media-queries/media-queries.html" />
 
@@ -15,6 +14,7 @@
 <link rel="import" href="../../behaviors/su-print-behavior.html" />
 <link rel="import" href="../../behaviors/su-resize-behavior.html" />
 <link rel="import" href="../../behaviors/guuey-dialog-resize-behavior.html" />
+<link rel="import" href="../../behaviors/guuey-form-validation-behavior.html" />
 
 <link rel="import" href="../../styles/common-styles.html" />
 
@@ -82,15 +82,10 @@
         <paper-dialog id="addReviewDialog" class="guuey-modal guuey-add-modal">
 
           <h2>Add Review</h2>
-
-          <paper-input value="{{reviewData.name}}" label="name of the review"></paper-input>
-          <paper-input value="{{reviewData.description}}" label="short description"></paper-input>
-
-          <guuey-date-input
-            class="modal-date-input"
-            value="{{reviewData.nextReviewDate}}"
-            label="Next Review Date">
-          </guuey-date-input>
+          <span id="formField">
+            <paper-input required value="{{reviewData.name}}" label="name of the review"></paper-input>
+            <paper-input required value="{{reviewData.description}}" label="short description"></paper-input>
+          </span>
 
           <div class="modal-button-container">
             <paper-button class="cancel-button" on-tap="cancelNewReview">cancel</paper-button>
@@ -139,6 +134,8 @@
               </su-care-review-multi-view>
 
               <su-care-review-edit-view
+                id="editView"
+                wait-for-auto-validate
                 name="edit-view"
                 review-data="{{reviewData}}"
                 su-basic-info="[[suBasicInfo]]"
@@ -146,9 +143,7 @@
                 home="[[home]]"
                 patient="[[patient]]">
               </su-care-review-edit-view>
-
             </neon-animated-pages>
-
           </div>
 
         </paper-card>
@@ -160,13 +155,6 @@
     Polymer({
 
       is: 'su-care-review',
-
-      ready:function() {
-        this.fire("pageLoaded", {page: this.page});
-        this.addEventListener("print", this.print);
-        this.addEventListener("editReview", this.editReview);
-        this.addEventListener("deleteReview", this.deleteReview);
-      },
 
       properties: {
 
@@ -196,6 +184,16 @@
           observer: "initNotify"
         },
 
+        waitForAutoValidate: {
+          type: Boolean,
+          value: true
+        },
+
+        editWaitForAutoValidate: {
+          Type: Boolean,
+          value: true
+        }
+
       },
 
       behaviors: [
@@ -203,10 +201,19 @@
         Polymer.fabAnimationBehavior,
         Polymer.suPrintBehavior,
         Polymer.suResizeBehavior,
-        Polymer.guueyDialogResizeBehavior
+        Polymer.guueyDialogResizeBehavior,
+        Polymer.guueyFormValidationBehavior
       ],
 
-      initNotify: function() {
+      ready: function() {
+        this.fire("pageLoaded", {page: this.page});
+        this.addEventListener("print", this.print);
+        this.addEventListener("editReview", this.editReview);
+        this.addEventListener("deleteReview", this.deleteReview);
+
+      },
+
+      initNotify: function(reviewId) {
         this.$.dateNotify.initialize();
       },
 
@@ -225,21 +232,28 @@
       },
 
       saveNewReview: function() {
-        var path = "/homes/" + this.home + "/patients/" + this.patient + "/carePlanReviews";
-        this.$.reviewDB.save(path, null)
-          .then(function(val) {
-            this.reviewId = this.$.reviewDB.path.split("/").pop();
-            this.$.addReviewDialog.close();
-            this.pageState = "edit-view"
-            this.animateEditViewFab();
-            this.fire("openToast", {toastText: "New care plan review saved."});
-            this.$.reviewDB.transactionsComplete = this._checkServiceUser(this.suBasicInfo);
-            this.fire("newCareReviewSaved", {reviewId: this.reviewId});
-          }.bind(this))
-          .catch(function(error) {
-            this.$.addReviewDialog.close();
-            this.fire("openToast",{toastText: "There was an error saving the care plan review: " + error});
-          }.bind(this));
+        var validation = this.validateInputs(this.$.formField);
+        if(validation.invalid) {
+          this.fire("openToast", {toastText: "The following items are missing or invalid: " + validation.invalidInputs});
+        } else {
+          var path = "/homes/" + this.home + "/patients/" + this.patient + "/carePlanReviews";
+          this.$.reviewDB.save(path, null)
+            .then(function(val) {
+              this.reviewId = this.$.reviewDB.path.split("/").pop();
+              this.$.addReviewDialog.close();
+              this.pageState = "edit-view"
+              this.animateEditViewFab();
+              this.$.editView.startAutoValidate();
+              this.fire("openToast", {toastText: "New care plan review saved."});
+              this.$.reviewDB.transactionsComplete = this._checkServiceUser(this.suBasicInfo);
+              this.clearValidation(this.$.formField);
+              this.fire("newCareReviewSaved", {reviewId: this.reviewId});
+            }.bind(this))
+            .catch(function(error) {
+              this.$.addReviewDialog.close();
+              this.fire("openToast",{toastText: "There was an error saving the care plan review: " + error});
+            }.bind(this));
+        };
       },
 
       cancelNewReview: function() {
@@ -252,8 +266,9 @@
         this.reviewId = e.detail.reviewId;
         this.$.reviewDB.path = "/homes/" + this.home + "/patients/" + this.patient + "/carePlanReviews/" + this.reviewId;
         this.$.reviewDB.transactionsComplete = this._checkServiceUser(this.suBasicInfo);
-        this.pageState = "edit-view";
+        this.set('pageState', 'edit-view');
         this.animateEditViewFab();
+        this.$.editView.startAutoValidate();
       },
 
       deleteReview: function(e) {
@@ -270,6 +285,7 @@
       },
 
       finishReview: function() {
+        this.$.editView.stopAutoValidate();
         this.pageState = "multi-view";
         this.animateMultiViewFab();
         this.$.reviewDB.path = null;
